compiler-skeleton/tests/compile-error/comp_decl.ln
a:int;
a:int;

a':int;
a':bool;

a':int;
a':int[];

b:int;
{	
	b:int;
}